Attribute Image Creators

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 
                 <div class="col-lg-3 DivScale">
                     <img class="hobby" src="route.png" alt="Hobby image">
+
                 </div>
                 <div class="col-lg-9">
                   <h3>Interests and Hobbies</h3>
@@ -410,10 +411,24 @@
 
     <section id="GetInTouch" class="ContactMeBackground">
 
-      <h4 class="headingspace"> Get in Touch <i class="fa-solid fa-comments"></i></h2>
+      <h4 class="headingspace"> Get in Touch <i class="fa-solid fa-comments"></i></h4>
       <p> <a class = "urlStyle" href="http://www.linkedin.com/in/jasonziemons" target="_blank"><i class="contactMeIcons fa-brands fa-linkedin"></i> &nbsp; Jason Ziemons</a></p>
       <p> <a class = "urlStyle" href="mailto: jasonziemons9@gmail.com"><i class="contactMeIcons fa-solid fa-envelope"></i> &nbsp; jasonziemons9@gmail.com</a></p>
       <p> <a class = "urlStyle" href="tel:+27823059560"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; +27 82 305 9560</a></p>
+    </section>
+
+    <section>
+      <br />
+      <h6> Image Attribution <i class="fa-solid fa-images"></i></h6>
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/goal" title="goal icons">Goal icons created by Freepik - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/hiking" title="hiking icons">Hiking icons created by Chattapat.k - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/engineering" title="engineering icons">Engineering icons created by Eucalyp - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/web-development" title="web development icons">Web development icons created by Paul J. - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/success" title="success icons">Success icons created by HAJICON - Flaticon</a>
     </section>
 
 
