Background image change

--- a/index.html
+++ b/index.html
@@ -420,6 +420,8 @@
     <section>
       <br />
       <h6> Image Attribution <i class="fa-solid fa-images"></i></h6>
+      <a class ="attributeUrlStyle" href="https://www.freepik.com/free-vector/retro-color-moon-landscape-minimalist-vintage-poster-style_13313404.htm#page=19&query=simple%20background&position=24&from_view=keyword&track=ais">Image by rawpixel.com on Freepik</a>
+      <br />
       <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/goal" title="goal icons">Goal icons created by Freepik - Flaticon</a>
       <br />
       <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/hiking" title="hiking icons">Hiking icons created by Chattapat.k - Flaticon</a>
