--- a/index.html
+++ b/index.html
@@ -110,8 +110,6 @@
                     My foundation as an Electrical Engineer, coupled with my fervor for software development, has equipped me with a dynamic skill set. My journey has been enriched by a variety of experiences, including my successful time in a IT role where I excelled as a Salesforce Administrator. This unique role not only honed my interpersonal abilities but also ingrained in me a solid grasp of technology.
                     <br /><br />
                     I am now driven to transition into an engineering role, combining my technological skills with my passion for problem-solving, design, and my desire to constantly keep learning for the next challenge. The exhilarating prospect of contributing to the world of engineering and software by developing my own solutions has fueled my journey with an unwavering sense of purpose.
-                    <br /><br />
-                    Join me as I lead you through my journey, experiences, and projects, each representing a significant milestone in my pursuit of knowledge. From my early academic years, where I immersed myself in the intricacies of Electrical Engineering and my continued development and learning through my time as a Salesforce Administrator.
                   </p>
                 </div>
 
@@ -165,11 +163,12 @@
                   <i class="icon fa fa-school"></i>
                   <div class="content">
                     <h2>High School</h2>
-                    <p>
+                    <p class="AboutText">
                       I went to Marist Brothers Linmeyer where I took Engineering Graphics and design (EGD), Core mathematics, Physical Science and History as my set of subjects and achieved a matric average of 74% Across all subjects.
                       <br /><br />
-                      <a class ="urlStyle" href ="Matric certificate.pdf" attributes-list download > <i class="fa-solid fa-download"></i> Matric Certificate </a>
                     </p>
+                      <a class ="urlStyle" href ="Matric certificate.pdf" attributes-list download > <i class="fa-solid fa-download"></i> Matric Certificate </a>
+
                   </div>
                 </div>
                 <div class="container right">
@@ -177,13 +176,14 @@
                   <i class="icon fa fa-graduation-cap"></i>
                   <div class="content">
                     <h2>University</h2>
-                    <p>
+                    <p class="AboutText">
                       I studied Electrical and Information engineering at the University of the Witwatersrand in Johannesburg. My degree was made up of high and low voltage electrical design, C++ software development, Arduino microcontroller programming and control systems design.<br /><br /> In first year I was selected as a Golden key recipient for being in the top 10% and at the end of my degree I achieved a overall GPA score of 68.26%. Additionally I took a further course for power engineering which revolved around design considerations for the protection of high power systems.
                       <br /><br />
+                    </p>
                       <a class ="urlStyle" href ="University Transcript.pdf" attributes-list download > <i class="fa-solid fa-download"></i> University Transcript </a>
                       <br />
                       <a class ="urlStyle" href ="Golden key Certificate.pdf" attributes-list download > <i class="fa-solid fa-download"></i> Golden Key Certificate </a>
-                    </p>
+
                   </div>
                 </div>
                 <div class="container left">
@@ -191,13 +191,14 @@
                   <i class="icon fa-solid fa-code-branch"></i>
                   <div class="content">
                     <h2>Honours Project</h2>
-                    <p>
+                    <p class="AboutText">
                       My honours project took the software route of my degree where we were tasked with using machine learning methods to identify and classify depictions of lighning in 18th century paintings. The goal was to determine if Benjamin Franklins presence had an impact on art culture during his time spent in France. In this project we trained and modified a Convolutional Neural Network (CNN) in Matlab to achieve our goal. A variant of this paper was published on IEEE and was showcased at the 2022 International Conference on Lightning Protection (ICLP) in Cape Town.
                       <br /><br />
+                    </p>
                       <a class ="urlStyle" href ="EIE_Laboratory_1724762.pdf" attributes-list download > <i class="fa-solid fa-download"></i> Honours Project Final Report </a>
                       <br />
                       <a class ="urlStyle" href ="https://ieeexplore.ieee.org/abstract/document/9942464" target="_blank" > <i class="fa-solid fa-download"></i> IEEE Publication </a>
-                    </p>
+
                   </div>
                 </div>
                 <div class="container right">
@@ -205,9 +206,10 @@
                   <i class="icon fa-brands fa-salesforce"></i>
                   <div class="content">
                     <h2>Salesforce Administrator</h2>
-                    <p>
+                    <p class="AboutText">
                       As a Salesforce Administrator there are 2 sides to the job which have developed different aspects of my hard and soft skill sets. The technical aspects of the job are based in debugging Apex and Javascript code in order to solve issues in the system, we are also tasked with the creation of logic based formulas and Flow automations to improve the business workflow. In this I have also self learnt Excel VBA programming and Python to assist with automating bulk data transfers to Salesforce.
                       <br /><br />
+
                       On the side of soft skills I go through a case/ticket rotation and project development role that has me resolving issues for many company stakeholders and scoping new implementations that are required in the Organization.
                     </p>
                   </div>
@@ -217,7 +219,7 @@
                   <i class="icon fa-solid fa-file-signature"></i>
                   <div class="content">
                     <h2>The Next Adventure</h2>
-                    <p>
+                    <p class="AboutText">
                       My goal is to move into a software development role and start learning the skills to become a full stack developer.
                     </p>
                   </div>
@@ -248,7 +250,7 @@
                     <img src="Engineering.png" class="skillImages card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title bold">Electrical Engineering</h5>
-                      <p class="card-text">These are skills I have developed through my studies as well as skills nurtured through my hobbies.</p>
+                      <p class="card-text AboutText">These are skills I have developed through my studies as well as skills nurtured through my hobbies.</p>
 
                       <ul class="list-group list-group-flush">
                         <hr class ="RemoveMargins" />
@@ -271,7 +273,7 @@
                     <div class="card-body">
 
                       <h5 class="card-title bold">Software Development</h5>
-                      <p class="card-text">These skills represent my confidence in the following programming languages as a result of personal learning and use in my workplace.</p>
+                      <p class="card-text AboutText">These skills represent my confidence in the following programming languages as a result of personal learning and use in my workplace.</p>
 
                       <ul class="list-group list-group-flush">
                         <hr class ="RemoveMargins" />
@@ -293,7 +295,7 @@
                     <img src="teamwork.png" class="skillImages card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title bold">Soft Skills </h5>
-                      <p class="card-text"> This section represents the skills I have obtained in a corporate working environment and represent my work place management and team based performance.</p>
+                      <p class="card-text AboutText"> This section represents the skills I have obtained in a corporate working environment and represent my work place management and team based performance.</p>
 
                       <ul class="list-group list-group-flush">
                         <hr class ="RemoveMargins" />
@@ -321,7 +323,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-              <h2 class="AccordionHeaderFormat">Personal Projects <i class="fa-solid fa-hand-holding-heart"></i></h2>
+              <h2 class="AccordionHeaderFormat">Personal Projects and Learning <i class="fa-solid fa-hand-holding-heart"></i></h2>
             </button>
           </h2>
           <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
@@ -384,18 +386,66 @@
                 <div class="row">
                   <div class="col-4">
                     <div class="CentreButtons list-group" id="list-tab" role="tablist">
-                      <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Leandro Carvalho (Senior Salesforce Administrator)</a>
-                      <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Relwyn Pillay (Salesforce Administrator)</a>
-                      <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Christiaan Van Der Merwe (Lead Front End Developer) </a>
-                      <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Jiyaad Lai (University Colleague)</a>
+                      <a class="list-group-item list-group-item-action active" id="list-Leandro-list" data-bs-toggle="list" href="#list-Leandro" role="tab" aria-controls="list-Leandro">Leandro Carvalho <br /> (Senior Salesforce Administrator)</a>
+                      <a class="list-group-item list-group-item-action" id="list-Relwyn-list" data-bs-toggle="list" href="#list-Relwyn" role="tab" aria-controls="list-Relwyn">Relwyn Pillay <br /> (Salesforce Administrator)</a>
+                      <a class="list-group-item list-group-item-action" id="list-Chris-list" data-bs-toggle="list" href="#list-Chris" role="tab" aria-controls="list-Chris">Christiaan Van Der Merwe <br /> (Lead Front End Developer) </a>
+                      <a class="list-group-item list-group-item-action" id="list-Jiyaad-list" data-bs-toggle="list" href="#list-Jiyaad" role="tab" aria-controls="list-Jiyaad">Jiyaad Lai <br /> (University Colleague)</a>
                     </div>
                   </div>
                   <div class="col-8">
                     <div class="tab-content" id="nav-tabContent">
-                      <div class="ReferenceContent tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretiumLorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretiumLorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretiumLorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium</div>
-                      <div class="ReferenceContent tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>
-                      <div class="ReferenceContent tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>
-                      <div class="ReferenceContent tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>
+                      <div class="ReferenceContent tab-pane fade show active" id="list-Leandro" role="tabpanel" aria-labelledby="list-Leandro-list">
+                        <h5>Character Description</h5>
+                        <p class="AboutText">
+                          "Here We can add a description of what this person thinks on you and you can learn who your real friends are lol."
+                        </p>
+                        <hr />
+                        <h5>Contact Details</h5>
+                        <p class="AboutText">
+                          Cel: &nbsp +27 82 111 1111
+                          <br />
+                          Email: &nbsp Placeholder@gmail.com
+                        </p>
+                      </div>
+                      <div class="ReferenceContent tab-pane fade" id="list-Relwyn" role="tabpanel" aria-labelledby="list-Relwyn-list">
+                        <h5>Character Description</h5>
+                        <p class="AboutText">
+                          "Here We can add a description of what this person thinks on you and you can learn who your real friends are lol."
+                        </p>
+                        <hr />
+                        <h5>Contact Details</h5>
+                        <p class="AboutText">
+                          Cel: &nbsp +27 82 111 1111
+                          <br />
+                          Email: &nbsp Placeholder@gmail.com
+                        </p>
+                      </div>
+                      <div class="ReferenceContent tab-pane fade" id="list-Chris" role="tabpanel" aria-labelledby="list-Chris-list">
+                        <h5>Character Description</h5>
+                        <p class="AboutText">
+                          "Here We can add a description of what this person thinks on you and you can learn who your real friends are lol."
+                        </p>
+                        <hr />
+                        <h5>Contact Details</h5>
+                        <p class="AboutText">
+                          Cel: &nbsp +27 82 111 1111
+                          <br />
+                          Email: &nbsp Placeholder@gmail.com
+                        </p>
+                      </div>
+                      <div class="ReferenceContent tab-pane fade" id="list-Jiyaad" role="tabpanel" aria-labelledby="list-Jiyaad-list">
+                        <h5>Character Description</h5>
+                        <p class="AboutText">
+                          "Here We can add a description of what this person thinks on you and you can learn who your real friends are lol."
+                        </p>
+                        <hr />
+                        <h5>Contact Details</h5>
+                        <p class="AboutText">
+                          Cel: &nbsp +27 82 111 1111
+                          <br />
+                          Email: &nbsp Placeholder@gmail.com
+                        </p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -420,6 +470,9 @@
     <section>
       <br />
       <h6> Image Attribution <i class="fa-solid fa-images"></i></h6>
+      <p class="attributeUrlStyle">
+        Thank you to the below creators for their artworks which helped in creating this website.
+      </p>
       <a class ="attributeUrlStyle" href="https://www.freepik.com/free-vector/retro-color-moon-landscape-minimalist-vintage-poster-style_13313404.htm#page=19&query=simple%20background&position=24&from_view=keyword&track=ais">Image by rawpixel.com on Freepik</a>
       <br />
       <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/goal" title="goal icons">Goal icons created by Freepik - Flaticon</a>
