--- a/index.html
+++ b/index.html
@@ -336,14 +336,15 @@
                   <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="Engineering.png" class="CarouselImages" alt="...">
+                  <div class="carousel-item active">
+                    <img src="Software Courses.png" class="CarouselImages" alt="Various Programming languages from Flaticon Icons">
                     <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>Some representative placeholder content for the first slide.</p>
+                      <h5 class="bold">Personal Learning Through Udemy Courses</h5>
+                      <p>There is always something new to learn and right now I am working on 2 Udemy courses for Front and Backend development. For Frontend and why I was able to create this website I am doing the course <a class = "urlStyle" href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?kw=The+Complete+2023+Web+Development&src=sac" target="_blank">The Complete 2023 Web Development Bootcamp</a> and backend development I am currently learning python and working through the course <a class = "urlStyle" href="https://www.udemy.com/course/100-days-of-code/?kw=100+days+of+Code&src=sac" target="_blank">100 Days of Code: The Complete Python Pro Bootcamp for 2023</a>
+                      </p>
                     </div>
                   </div>
-                  <div class="carousel-item" data-bs-interval="2000">
+                  <div class="carousel-item">
                     <img src="programming.png" class="CarouselImages" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Second slide label</h5>
@@ -484,6 +485,18 @@
       <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/web-development" title="web development icons">Web development icons created by Paul J. - Flaticon</a>
       <br />
       <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/success" title="success icons">Success icons created by HAJICON - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/python" title="python icons">Python icons created by Freepik - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Smashicons - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/css-file" title="css file icons">Css file icons created by Freepik - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/java" title="java icons">Java icons created by Pixel perfect - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/nodejs" title="nodejs icons">Nodejs icons created by Freepik - Flaticon</a>
+      <br />
+      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/react" title="react icons">React icons created by Freepik - Flaticon</a>
     </section>
 
 
