--- a/index.html
+++ b/index.html
@@ -474,29 +474,36 @@
       <p class="attributeUrlStyle">
         Thank you to the below creators for their artworks which helped in creating this website.
       </p>
-      <a class ="attributeUrlStyle" href="https://www.freepik.com/free-vector/retro-color-moon-landscape-minimalist-vintage-poster-style_13313404.htm#page=19&query=simple%20background&position=24&from_view=keyword&track=ais">Image by rawpixel.com on Freepik</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/goal" title="goal icons">Goal icons created by Freepik - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/hiking" title="hiking icons">Hiking icons created by Chattapat.k - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/engineering" title="engineering icons">Engineering icons created by Eucalyp - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/web-development" title="web development icons">Web development icons created by Paul J. - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/success" title="success icons">Success icons created by HAJICON - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/python" title="python icons">Python icons created by Freepik - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Smashicons - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/css-file" title="css file icons">Css file icons created by Freepik - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/java" title="java icons">Java icons created by Pixel perfect - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/nodejs" title="nodejs icons">Nodejs icons created by Freepik - Flaticon</a>
-      <br />
-      <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/react" title="react icons">React icons created by Freepik - Flaticon</a>
+      <div class="row">
+        <div class="col-3 leftalign"> </div>
+        <div class="col-3 leftalign">
+          <a class ="attributeUrlStyle" href="https://www.freepik.com/free-vector/retro-color-moon-landscape-minimalist-vintage-poster-style_13313404.htm#page=19&query=simple%20background&position=24&from_view=keyword&track=ais">Image by rawpixel.com on Freepik</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/goal" title="goal icons">Goal icons created by Freepik - Flaticon</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/hiking" title="hiking icons">Hiking icons created by Chattapat.k - Flaticon</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/engineering" title="engineering icons">Engineering icons created by Eucalyp - Flaticon</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/web-development" title="web development icons">Web development icons created by Paul J. - Flaticon</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/success" title="success icons">Success icons created by HAJICON - Flaticon</a>
+        </div>
+        <div class="col-3 leftalign">
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/python" title="python icons">Python icons created by Freepik - Flaticon</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/html" title="html icons">Html icons created by Smashicons - Flaticon</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/css-file" title="css file icons">Css file icons created by Freepik - Flaticon</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/java" title="java icons">Java icons created by Pixel perfect - Flaticon</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/nodejs" title="nodejs icons">Nodejs icons created by Freepik - Flaticon</a>
+          <br />
+          <a class ="attributeUrlStyle" href="https://www.flaticon.com/free-icons/react" title="react icons">React icons created by Freepik - Flaticon</a>
+        </div>
+        <div class="col-3 leftalign"> </div>
+      </div>
     </section>
 
 
