--- a/index.html
+++ b/index.html
@@ -367,10 +367,12 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
+
                     <img src="Software Courses.png" class="CarouselImages" alt="Various Programming languages from Flaticon Icons">
+
                     <div class="carousel-caption d-none d-md-block">
                       <h5 class="bold">Personal Learning Through Udemy Courses</h5>
-                      <p>There is always something new to learn and right now I am working on 2 Udemy courses for Front and Backend development. For Frontend and why I was able to create this website I am doing the course <a class = "urlStyle" href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?kw=The+Complete+2023+Web+Development&src=sac" target="_blank">The Complete 2023 Web Development Bootcamp</a> and backend development I am currently learning python and working through the course <a class = "urlStyle" href="https://www.udemy.com/course/100-days-of-code/?kw=100+days+of+Code&src=sac" target="_blank">100 Days of Code: The Complete Python Pro Bootcamp for 2023</a>
+                      <p class ="AboutText">There is always something new to learn and right now I am working on 2 Udemy courses for Front and Backend development. For Frontend and why I was able to create this website I am doing the course <a class = "urlStyle" href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?kw=The+Complete+2023+Web+Development&src=sac" target="_blank">The Complete 2023 Web Development Bootcamp</a> and backend development I am currently learning python and working through the course <a class = "urlStyle" href="https://www.udemy.com/course/100-days-of-code/?kw=100+days+of+Code&src=sac" target="_blank">100 Days of Code: The Complete Python Pro Bootcamp for 2023</a>
                       </p>
                     </div>
                   </div>
@@ -378,14 +380,14 @@
                     <img src="programming.png" class="CarouselImages" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Second slide label</h5>
-                      <p>Some representative placeholder content for the second slide.</p>
+                      <p class ="AboutText">Some representative placeholder content for the second slide.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <img src="teamwork.png" class="CarouselImages" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p>
+                      <p class ="AboutText">Some representative placeholder content for the third slide.</p>
                     </div>
                   </div>
                 </div>
