Add Improved modularity for smaller resolutions

--- a/index.html
+++ b/index.html
@@ -367,14 +367,15 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-
+                    <h5 class="bold">Personal Learning Through Udemy Courses</h5>
+                    <p class ="AboutText thin_row">There is always something new to learn and right now I am working on 2 Udemy courses for Front and Backend development. For Frontend and why I was able to create this website I am doing the course <a class = "urlStyle AboutText" href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?kw=The+Complete+2023+Web+Development&src=sac" target="_blank">The Complete 2023 Web Development Bootcamp</a> and backend development I am currently learning python and working through the course <a class = "urlStyle AboutText" href="https://www.udemy.com/course/100-days-of-code/?kw=100+days+of+Code&src=sac" target="_blank">100 Days of Code: The Complete Python Pro Bootcamp for 2023</a>
+                    </p>
                     <img src="Software Courses.png" class="CarouselImages" alt="Various Programming languages from Flaticon Icons">
 
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5 class="bold">Personal Learning Through Udemy Courses</h5>
-                      <p class ="AboutText">There is always something new to learn and right now I am working on 2 Udemy courses for Front and Backend development. For Frontend and why I was able to create this website I am doing the course <a class = "urlStyle" href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?kw=The+Complete+2023+Web+Development&src=sac" target="_blank">The Complete 2023 Web Development Bootcamp</a> and backend development I am currently learning python and working through the course <a class = "urlStyle" href="https://www.udemy.com/course/100-days-of-code/?kw=100+days+of+Code&src=sac" target="_blank">100 Days of Code: The Complete Python Pro Bootcamp for 2023</a>
-                      </p>
-                    </div>
+                    <!-- <div class="carousel-caption d-none d-md-block">
+
+
+                    </div> -->
                   </div>
                   <div class="carousel-item">
                     <img src="programming.png" class="CarouselImages" alt="...">
