Modify references section

--- a/index.html
+++ b/index.html
@@ -420,15 +420,15 @@
                 <div class="row">
                   <div class="col-4">
                     <div class="CentreButtons list-group" id="list-tab" role="tablist">
-                      <a class="list-group-item list-group-item-action active" id="list-Leandro-list" data-bs-toggle="list" href="#list-Leandro" role="tab" aria-controls="list-Leandro">Leandro Carvalho <br /> (Senior Salesforce Administrator)</a>
-                      <a class="list-group-item list-group-item-action" id="list-Relwyn-list" data-bs-toggle="list" href="#list-Relwyn" role="tab" aria-controls="list-Relwyn">Relwyn Pillay <br /> (Salesforce Administrator)</a>
-                      <a class="list-group-item list-group-item-action" id="list-Chris-list" data-bs-toggle="list" href="#list-Chris" role="tab" aria-controls="list-Chris">Christiaan Van Der Merwe <br /> (Lead Front End Developer) </a>
-                      <a class="list-group-item list-group-item-action" id="list-Jiyaad-list" data-bs-toggle="list" href="#list-Jiyaad" role="tab" aria-controls="list-Jiyaad">Jiyaad Lai <br /> (University Colleague)</a>
+                      <a class="list-group-item list-group-item-action active centre_alignment" id="list-Nicholas-list" data-bs-toggle="list" href="#list-Nicholas" role="tab" aria-controls="list-Nicholas" >Nicholas Da Silva <br /> (Lead Salesforce Administrator)</a>
+                      <a class="list-group-item list-group-item-action centre_alignment" id="list-Vincent-list" data-bs-toggle="list" href="#list-Vincent" role="tab" aria-controls="list-Vincent">Vincent Jordaan <br /> (Senior Salesforce Administrator)</a>
+                      <a class="list-group-item list-group-item-action centre_alignment" id="list-Leandro-list" data-bs-toggle="list" href="#list-Leandro" role="tab" aria-controls="list-Leandro">Leandro Carvalho <br /> (Senior Salesforce Administrator) </a>
+                      <a class="list-group-item list-group-item-action centre_alignment" id="list-Chris-list" data-bs-toggle="list" href="#list-Chris" role="tab" aria-controls="list-Chris">Christiaan Van Der Merwe <br /> (Lead Front End Developer) </a>
                     </div>
                   </div>
                   <div class="col-8">
                     <div class="tab-content" id="nav-tabContent">
-                      <div class="ReferenceContent tab-pane fade show active" id="list-Leandro" role="tabpanel" aria-labelledby="list-Leandro-list">
+                      <div class="ReferenceContent tab-pane fade show active" id="list-Nicholas" role="tabpanel" aria-labelledby="list-Nicholas-list">
                         <h5>Character Description</h5>
                         <p class="AboutText">
                           "Here We can add a description of what this person thinks on you and you can learn who your real friends are lol."
@@ -441,7 +441,20 @@
                           Email: &nbsp Placeholder@gmail.com
                         </p>
                       </div>
-                      <div class="ReferenceContent tab-pane fade" id="list-Relwyn" role="tabpanel" aria-labelledby="list-Relwyn-list">
+                      <div class="ReferenceContent tab-pane fade" id="list-Vincent" role="tabpanel" aria-labelledby="list-Vincent-list">
+                        <h5>Character Description</h5>
+                        <p class="AboutText">
+                          "Here We can add a description of what this person thinks on you and you can learn who your real friends are lol."
+                        </p>
+                        <hr />
+                        <h5>Contact Details</h5>
+                        <p class="AboutText">
+                          Cel: &nbsp +27 82 111 1111
+                          <br />
+                          Email: &nbsp Placeholder@gmail.com
+                        </p>
+                      </div>
+                      <div class="ReferenceContent tab-pane fade" id="list-Leandro" role="tabpanel" aria-labelledby="list-Leandro-list">
                         <h5>Character Description</h5>
                         <p class="AboutText">
                           "Here We can add a description of what this person thinks on you and you can learn who your real friends are lol."
@@ -455,19 +468,6 @@
                         </p>
                       </div>
                       <div class="ReferenceContent tab-pane fade" id="list-Chris" role="tabpanel" aria-labelledby="list-Chris-list">
-                        <h5>Character Description</h5>
-                        <p class="AboutText">
-                          "Here We can add a description of what this person thinks on you and you can learn who your real friends are lol."
-                        </p>
-                        <hr />
-                        <h5>Contact Details</h5>
-                        <p class="AboutText">
-                          Cel: &nbsp +27 82 111 1111
-                          <br />
-                          Email: &nbsp Placeholder@gmail.com
-                        </p>
-                      </div>
-                      <div class="ReferenceContent tab-pane fade" id="list-Jiyaad" role="tabpanel" aria-labelledby="list-Jiyaad-list">
                         <h5>Character Description</h5>
                         <p class="AboutText">
                           "Here We can add a description of what this person thinks on you and you can learn who your real friends are lol."
