Add Permissions Policy
Website was being flagged as dangerous on Microsoft Edge

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>Jason Ziemons CV</title>
     <link rel="icon" href="favicon (2).ico?v=2">
 
