Remove Contact Details

--- a/index.html
+++ b/index.html
@@ -413,7 +413,9 @@
                   <div class="col-4">
                     <div class="CentreButtons list-group" id="list-tab" role="tablist">
                       <a class="list-group-item list-group-item-action active centre_alignment" id="list-Leandro-list" data-bs-toggle="list" href="#list-Leandro" role="tab" aria-controls="list-Leandro" >Leandro Carvalho<br /> (Senior Salesforce Administrator)</a>
-                      <a class="list-group-item list-group-item-action centre_alignment" id="list-Preston-list" data-bs-toggle="list" href="#list-Preston" role="tab" aria-controls="list-Preston">Preston Govender<br /> (Salesforce Administrator)</a>
+                      <a class="list-group-item list-group-item-action centre_alignment" id="list-
+
+                      -list" data-bs-toggle="list" href="#list-Preston" role="tab" aria-controls="list-Preston">Preston Govender<br /> (Salesforce Administrator)</a>
                       <a class="list-group-item list-group-item-action centre_alignment" id="list-Shannon-list" data-bs-toggle="list" href="#list-Shannon" role="tab" aria-controls="list-Shannon">Shannon Weeks<br /> (Digital Transformation Specialist) </a>
                       <a class="list-group-item list-group-item-action centre_alignment" id="list-Jordan-list" data-bs-toggle="list" href="#list-Jordan" role="tab" aria-controls="list-Jordan">Jordan Rawlins<br /> (Salesforce Administrator) </a>
                     </div>
@@ -427,7 +429,7 @@
                         </p>
                         <hr />
                         <h5>Contact Details</h5>
-                          <p> <a class = "urlStyle" href="tel:+27792395795"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; +27 79 239 5795</a></p>
+                          <p> <a class = "urlStyle"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; Available on Request</a></p>
                       </div>
                       <div class="ReferenceContent tab-pane fade" id="list-Preston" role="tabpanel" aria-labelledby="list-Preston-list">
                         <h5>Who is Preston to my working life ?</h5>
@@ -436,7 +438,7 @@
                         </p>
                         <hr />
                         <h5>Contact Details</h5>
-                          <p> <a class = "urlStyle" href="tel:+27847725087"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; +27 84 772 5087</a></p>
+                          <p> <a class = "urlStyle"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; Available on Request</a></p>
                       </div>
                       <div class="ReferenceContent tab-pane fade" id="list-Shannon" role="tabpanel" aria-labelledby="list-Shannon-list">
                         <h5>Who is Shannon to my working life ?</h5>
@@ -445,7 +447,7 @@
                         </p>
                         <hr />
                         <h5>Contact Details</h5>
-                          <p> <a class = "urlStyle" href="tel:+27760741242"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; +27 76 074 1242</a></p>
+                          <p> <a class = "urlStyle"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; Available on Request</a></p>
 
                       </div>
                       <div class="ReferenceContent tab-pane fade" id="list-Jordan" role="tabpanel" aria-labelledby="list-Jordan-list">
@@ -455,7 +457,7 @@
                         </p>
                         <hr />
                         <h5>Contact Details</h5>
-                        <p> <a class = "urlStyle" href="tel:+27817669227"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; +27 81 766 9227</a></p>
+                        <p> <a class = "urlStyle"><i class="contactMeIcons fa-solid fa-phone-volume"></i> &nbsp; Available on Request</a></p>
                       </div>
                     </div>
                   </div>
