Update post graduate text

--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
                   <div class="date">2021 - 2022</div>
                   <i class="icon fa-solid fa-code-branch"></i>
                   <div class="content">
-                    <h2><b>Honours Project</b></h2>
+                    <h2><b>Post Graduate Project</b></h2>
                     <p class="AboutText">
-                      My honours project took the software route of my degree where we were tasked with using machine learning methods to identify and classify depictions of lightning in 18th century paintings. The goal was to determine if Benjamin Franklin's presence had an impact on art culture during his time spent in France. In this project we trained and modified a Convolutional Neural Network (CNN) in MATLAB to achieve our goal. A variant of this paper was published on IEEE and was showcased at the 2022 International Conference on Lightning Protection (ICLP) in Cape Town.
+                      My post graduate project took the software route of my degree where we were tasked with using machine learning methods to identify and classify depictions of lightning in 18th century paintings. The goal was to determine if Benjamin Franklin's presence had an impact on art culture during his time spent in France. In this project we trained and modified a Convolutional Neural Network (CNN) in MATLAB to achieve our goal. A variant of this paper was published on IEEE and was showcased at the 2022 International Conference on Lightning Protection (ICLP) in Cape Town.
                       <br /><br />
                     </p>
-                      <a class ="urlStyle" href ="EIE_Laboratory_1724762.pdf" attributes-list download > <i class="fa-solid fa-download"></i> Honours Project Final Report </a>
+                      <a class ="urlStyle" href ="EIE_Laboratory_1724762.pdf" attributes-list download > <i class="fa-solid fa-download"></i> Post Graduate Project Final Report </a>
                       <br />
                       <a class ="urlStyle" href ="https://ieeexplore.ieee.org/abstract/document/9942464" target="_blank" > <i class="fa-solid fa-download"></i> IEEE Publication </a>
 
